// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoginForm > should render 1`] = `
<div>
  <form
    action="#"
  >
    <div
      class="chakra-form-control css-1kxonj9"
      role="group"
    >
      <label
        class="chakra-form__label css-g6pte"
        for="email"
        id="field-:r0:-label"
      >
        Email
        <span
          aria-hidden="true"
          class="chakra-form__required-indicator css-1tfjd1n"
          role="presentation"
        >
          *
        </span>
      </label>
      <input
        aria-required="true"
        class="chakra-input css-1cjy4zv"
        id="email"
        name="email"
        placeholder="Email"
        required=""
        value=""
      />
    </div>
    <div
      class="chakra-form-control css-1mn9ptq"
      role="group"
    >
      <label
        class="chakra-form__label css-g6pte"
        for="password"
        id="field-:r1:-label"
      >
        Password
        <span
          aria-hidden="true"
          class="chakra-form__required-indicator css-1tfjd1n"
          role="presentation"
        >
          *
        </span>
      </label>
      <input
        aria-required="true"
        class="chakra-input css-1cjy4zv"
        id="password"
        name="password"
        placeholder="Password"
        required=""
        type="password"
        value=""
      />
    </div>
    <button
      class="chakra-button css-13nworv"
      role="button"
      type="submit"
    >
      Login
    </button>
  </form>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`LoginForm > should show validation errors 1`] = `
<div>
  <form
    action="#"
  >
    <div
      class="chakra-form-control css-1kxonj9"
      role="group"
    >
      <label
        class="chakra-form__label css-g6pte"
        for="email"
        id="field-:r2:-label"
      >
        Email
        <span
          aria-hidden="true"
          class="chakra-form__required-indicator css-1tfjd1n"
          role="presentation"
        >
          *
        </span>
      </label>
      <input
        aria-required="true"
        class="chakra-input css-1cjy4zv"
        id="email"
        name="email"
        placeholder="Email"
        required=""
        value="email"
      />
    </div>
    <div
      class="chakra-form-control css-1mn9ptq"
      role="group"
    >
      <label
        class="chakra-form__label css-g6pte"
        for="password"
        id="field-:r3:-label"
      >
        Password
        <span
          aria-hidden="true"
          class="chakra-form__required-indicator css-1tfjd1n"
          role="presentation"
        >
          *
        </span>
      </label>
      <input
        aria-required="true"
        class="chakra-input css-1cjy4zv"
        id="password"
        name="password"
        placeholder="Password"
        required=""
        type="password"
        value="password"
      />
    </div>
    <button
      class="chakra-button css-13nworv"
      disabled=""
      role="button"
      type="submit"
    >
      Login
    </button>
  </form>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`LoginForm > should show validation errors 2`] = `
<div>
  <form
    action="#"
  >
    <div
      class="chakra-form-control css-1kxonj9"
      role="group"
    >
      <label
        class="chakra-form__label css-g6pte"
        for="email"
        id="field-:r2:-label"
      >
        Email
        <span
          aria-hidden="true"
          class="chakra-form__required-indicator css-1tfjd1n"
          role="presentation"
        >
          *
        </span>
      </label>
      <input
        aria-required="true"
        class="chakra-input css-1cjy4zv"
        id="email"
        name="email"
        placeholder="Email"
        required=""
        value="email@email.com"
      />
    </div>
    <div
      class="chakra-form-control css-1mn9ptq"
      role="group"
    >
      <label
        class="chakra-form__label css-g6pte"
        for="password"
        id="field-:r3:-label"
      >
        Password
        <span
          aria-hidden="true"
          class="chakra-form__required-indicator css-1tfjd1n"
          role="presentation"
        >
          *
        </span>
      </label>
      <input
        aria-required="true"
        class="chakra-input css-1cjy4zv"
        id="password"
        name="password"
        placeholder="Password"
        required=""
        type="password"
        value="12345678"
      />
    </div>
    <button
      class="chakra-button css-13nworv"
      role="button"
      type="submit"
    >
      Login
    </button>
  </form>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;
